# minitrue

./: README.md  pyproject.toml  todo.org
examples/: input.txt  rules.yml
minitrue/: __init__.py  cli.py  config.py  jinja.py  processor.py  rules.py  types.py
